--- a/boot/src/main/resources/application-prod.yml
+++ b/boot/src/main/resources/application-prod.yml
@@ -15,7 +15,7 @@ spring:
 
   datasource:
     driver-class: org.postgresql.Driver
-    url: jdbc:postgresql://aurora-demobooth.cluster-cca7yl0sa16x.ap-northeast-2.rds.amazonaws.com:5432/postgres
+    url: jdbc:postgresql://demobooth.cluster-cca7yl0sa16x.ap-northeast-2.rds.amazonaws.com:5432/postgres
     username: postgres
     password: test1357!
 
